--- a/iSocketClient/iSocketClient.csproj
+++ b/iSocketClient/iSocketClient.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\iSocket\iSocket.csproj" />
+  </ItemGroup>
+
 </Project>
