--- a/iSocketServer/iSocketServer.csproj
+++ b/iSocketServer/iSocketServer.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\iSocket\iSocket.csproj" />
+  </ItemGroup>
+
 </Project>
