--- a/iSocketServer/iSocketServer.csproj
+++ b/iSocketServer/iSocketServer.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\iSocket\iSocket.csproj" />
+    <ProjectReference Include="..\Share\Share.csproj" />
   </ItemGroup>
 
 </Project>
