--- a/SocketyServer/SocketyServer.csproj
+++ b/SocketyServer/SocketyServer.csproj
@@ -10,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iSocket\iSocket.csproj" />
-    <ProjectReference Include="..\Share\Share.csproj" />
+    <ProjectReference Include="..\iSocket\Sockety.csproj" />
+    <ProjectReference Include="..\Sockety\Sockety.csproj" />
   </ItemGroup>
 
 </Project>
