--- a/Exanple/SocketyClient/SocketyClient.csproj
+++ b/Exanple/SocketyClient/SocketyClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,8 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iSocket\Sockety.csproj" />
-    <ProjectReference Include="..\Sockety\Sockety.csproj" />
+    <ProjectReference Include="..\..\Sockety\Sockety.csproj" />
   </ItemGroup>
 
 </Project>
