--- a/Exanple/SocketyServer/SocketyServer.csproj
+++ b/Exanple/SocketyServer/SocketyServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,8 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iSocket\Sockety.csproj" />
-    <ProjectReference Include="..\Sockety\Sockety.csproj" />
+    <ProjectReference Include="..\..\Sockety\Sockety.csproj" />
   </ItemGroup>
 
 </Project>
