--- a/Sockety/Sockety.csproj
+++ b/Sockety/Sockety.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.1</Version>
+    <Authors>k.yamamoto</Authors>
+    <PackageProjectUrl>https://github.com/kyamamoto03/Sockety</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
