--- a/Example/SocketyClient/SocketyClient.csproj
+++ b/Example/SocketyClient/SocketyClient.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Sockety\Sockety.csproj" />
   </ItemGroup>
 
