--- a/Example/SocketyServer/SocketyServer.csproj
+++ b/Example/SocketyServer/SocketyServer.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
