--- a/Sockety/Sockety.csproj
+++ b/Sockety/Sockety.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MessagePack" Version="2.1.115" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.4" />
     <PackageReference Include="System.Net.Sockets" Version="4.3.0" />
   </ItemGroup>
 
